Added dynamic hostnames and ports from the routing config file

--- a/genesis-cluster/runtime/route-5.conf
+++ b/genesis-cluster/runtime/route-5.conf
@@ -3,7 +3,9 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4567,
+    "myHost":"localhost",
     "commandPort": 4568,
+    "workerThreads" : 4,    
     "routing": [
         {
             "id": 6,
