--- a/genesis-cluster/runtime/route-6.conf
+++ b/genesis-cluster/runtime/route-6.conf
@@ -3,7 +3,9 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4667,
+    "myHost":"localhost",
     "commandPort": 4668,
+    "workerThreads" : 4,
     "routing": [
     	{
             "id": 1,
