--- a/genesis-cluster/runtime/route-1.conf
+++ b/genesis-cluster/runtime/route-1.conf
@@ -3,7 +3,9 @@
     "internalNode": false,
     "heartbeatDt": 3000,
     "workPort": 4167,
+    "myHost":"localhost",
     "commandPort": 4168,
+    "workerThreads" : 4,
     "routing": [
         {
             "id": 5,
