--- a/genesis-cluster/.classpath
+++ b/genesis-cluster/.classpath
@@ -2,15 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/commons-pool2-2.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-all-1.8.5.jar"/>
-	<classpathentry kind="lib" path="lib/jedis-2.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/mongodb-driver-3.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/netty-all-4.1.6.Final.jar"/>
 	<classpathentry kind="lib" path="lib/protobuf-java-2.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.2.jar"/>
+	<classpathentry kind="lib" path="/Users/navdeepdahiya/git/genesis-cluster/genesis-cluster/lib/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/navdeepdahiya/git/genesis-cluster/genesis-cluster/lib/commons-pool2-2.4.2.jar"/>
+	<classpathentry kind="lib" path="/Users/navdeepdahiya/git/genesis-cluster/genesis-cluster/lib/jedis-2.4.2.jar"/>
+	<classpathentry kind="lib" path="/Users/navdeepdahiya/git/genesis-cluster/genesis-cluster/lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
