--- a/genesis-cluster/build.xml
+++ b/genesis-cluster/build.xml
@@ -8,7 +8,7 @@
 
 		<property name="config.dir" location="${basedir}/resources" />
 		<property name="protobuf.dir" location="/Users/gash/Developer/protobuf/current" />
-		<property name="junit.jar" location="/Users/gash/Developer/junit-4.8.2.jar" />
+		<property name="junit.jar" location="${basedir}/lib/junit-4.12.jar" />
 		<property name="logging.jar" location="${basedir}/lib/slf4j-log4j12-1.6.1.jar" />
 
 		<path id="project.classpath">
