--- a/genesis-cluster/build.xml
+++ b/genesis-cluster/build.xml
@@ -10,10 +10,13 @@
 		<property name="protobuf.dir" location="/Users/gash/Developer/protobuf/current" />
 		<property name="junit.jar" location="${basedir}/lib/junit-4.12.jar" />
 		<property name="logging.jar" location="${basedir}/lib/slf4j-log4j12-1.6.1.jar" />
+		<property name="mongo.jar" location="${basedir}/lib/mongo-java-driver-2.13.0.jar" />
+
 
 		<path id="project.classpath">
 			<pathelement location="${build.dir}" />
 			<pathelement location="${junit.jar}" />
+			<pathelement location="${mongo.jar}"/>
 			<pathelement location="${logging.jar}" />
 			<fileset dir="${basedir}/lib">
 				<include name="*.jar" />
@@ -46,13 +49,24 @@
 		</javac>
 	</target>
 
+	
+	
 	<target name="test.hello" depends="build.test">
-		<junit>
-			<classpath refid="project.classpath" />
-			<test name="gash.router.client.ClientTest" haltonfailure="no">
-			</test>
-		</junit>
-	</target>
+			<junit>
+				<classpath refid="project.classpath" />
+				<test name="gash.router.client.ClientTest" haltonfailure="no">
+				</test>
+			</junit>
+		</target>
+
+		<target name="hello" depends="build">
+				<java fork="yes" classname="com.genesis.router.app.DemoApp">
+					<classpath refid="project.classpath" />
+					<arg value="runtime/route-6.conf" />
+				</java>
+		</target>
+	
+	
 
 	<target name="client" depends="build">
 			<java fork="yes" classname="com.genesis.router.app.DemoApp">
