--- a/genesis-cluster/build.xml
+++ b/genesis-cluster/build.xml
@@ -96,12 +96,14 @@
 			</java>
 	</target>
 
-	<target name="node-1" depends="build">
-		<java fork="yes" classname="gash.router.server.MessageApp">
-			<classpath refid="project.classpath" />
-			<arg value="runtime/ring/route-1.conf" />
-		</java>
-	</target>
+	
+	
+	<target name="node-6" depends="build">
+				<java fork="yes" classname="com.genesis.router.server.MessageApp">
+					<classpath refid="project.classpath" />
+					<arg value="runtime/route-6.conf" />
+				</java>
+			</target>
 	
 	<target name="server" depends="build">
 			<java fork="yes" classname="com.genesis.router.server.MessageApp">
