--- a/genesis-cluster/runtime/route-6.conf
+++ b/genesis-cluster/runtime/route-6.conf
@@ -3,13 +3,13 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4667,
-    "myHost":"localhost",
+    "myHost":"169.254.174.193",
     "commandPort": 4668,
     "workerThreads" : 4,
     "routing": [
     	{
             "id": 1,
-            "host": "localhost",
+            "host": "169.254.203.11",
             "port": 4167
         }
     ]
