work stealer completed!

--- a/genesis-cluster/runtime/route-1.conf
+++ b/genesis-cluster/runtime/route-1.conf
@@ -3,7 +3,7 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4167,
-    "myHost":"localhost",
+    "myHost":"169.254.203.11",
     "commandPort": 4168,
     "workerThreads" : 4,
     "routing": [
