--- a/genesis-cluster/runtime/route-5.conf
+++ b/genesis-cluster/runtime/route-5.conf
@@ -3,13 +3,13 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4567,
-    "myHost":"localhost",
+    "myHost":"169.254.31.253",
     "commandPort": 4568,
     "workerThreads" : 4,    
     "routing": [
         {
             "id": 6,
-            "host": "localhost",
+            "host": "169.254.174.193",
             "port": 4667
         }
     ]
