--- a/genesis-cluster/resources/global.conf
+++ b/genesis-cluster/resources/global.conf
@@ -1,18 +1,12 @@
 {
-"clusterId": 1,
+"clusterId": 6,
 "globalPort": 5000,
 "globalHost": "localhost",
 "routing":[
 			{
-			"clusterId": 2,
-			"host": "localhost",
-			"port": 5000
-			},
-			
-			{
-			"clusterId": 3,
-			"host": "localhost",
+			"clusterId": 1,
+			"host": "169.254.203.4",
 			"port": 5000
 			}
-]
+	]
 }
