--- a/genesis-cluster/runtime/route-1.conf
+++ b/genesis-cluster/runtime/route-1.conf
@@ -3,14 +3,10 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4167,
-    "myHost":"169.254.203.11",
+    "myHost":"169.254.203.31",
     "commandPort": 4168,
-    "workerThreads" : 4,
+    "globalPort":5000,    
+    "workerThreads" : 2,
     "routing": [
-        {
-            "id": 5,
-            "host": "localhost",
-            "port": 4567
-        }
     ]
 }
