--- a/genesis-cluster/runtime/route-6.conf
+++ b/genesis-cluster/runtime/route-6.conf
@@ -5,6 +5,7 @@
     "workPort": 4667,
     "myHost":"169.254.174.193",
     "commandPort": 4668,
+    "globalPort":4669,
     "workerThreads" : 4,
     "routing": [
     	{
