--- a/genesis-cluster/runtime/route-2.conf
+++ b/genesis-cluster/runtime/route-2.conf
@@ -5,6 +5,7 @@
     "workPort": 4267,
     "myHost":"localhost",
     "commandPort": 4268,
+    "globalPort":4269,
     "workerThreads" : 4,
     "routing": [
         {
