--- a/genesis-cluster/runtime/route-5.conf
+++ b/genesis-cluster/runtime/route-5.conf
@@ -5,6 +5,7 @@
     "workPort": 4567,
     "myHost":"127.0.0.1",
     "commandPort": 4568,
+    "globalPort":4569,
     "workerThreads" : 4,    
     "routing": [
         {
