--- a/genesis-cluster/runtime/route-6.conf
+++ b/genesis-cluster/runtime/route-6.conf
@@ -3,15 +3,15 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4667,
-    "myHost":"169.254.174.193",
+    "myHost":"localhost",
     "commandPort": 4668,
     "globalPort":4669,
     "workerThreads" : 4,
     "routing": [
     	{
-            "id": 1,
+            "id": 2,
             "host": "169.254.203.11",
-            "port": 4167
+            "port": 4267
         }
     ]
 }
