--- a/genesis-cluster/build.xml
+++ b/genesis-cluster/build.xml
@@ -105,9 +105,10 @@
 			</target>
 	
 	<target name="node-2" depends="build">
-			<java fork="yes" classname="gash.router.server.MessageApp">
+			<java fork="yes" classname="com.genesis.router.server.MessageApp">
 				<classpath refid="project.classpath" />
-				<arg value="runtime/ring/route-2.conf" />
+				<arg value="runtime/route-2.conf" />
+				<arg value="resources/global.conf" />
 			</java>
 	</target>
 
@@ -117,6 +118,7 @@
 				<java fork="yes" classname="com.genesis.router.server.MessageApp">
 					<classpath refid="project.classpath" />
 					<arg value="runtime/route-6.conf" />
+					<arg value="resources/global.conf" />
 				</java>
 			</target>
 	
