--- a/genesis-cluster/resources/global.conf
+++ b/genesis-cluster/resources/global.conf
@@ -1,12 +1,32 @@
 {
 "clusterId": 6,
 "globalPort": 5000,
-"globalHost": "localhost",
+"globalHost": "169.254.203.31",
 "routing":[
+			
 			{
-			"clusterId": 1,
-			"host": "169.254.203.4",
-			"port": 5000
+				"clusterId": 1,
+				"host": "169.254.203.1",
+				"port": 5000
+			},
+			
+			{
+				"clusterId": 1,
+				"host": "169.254.203.2",
+				"port": 5000
+			},
+			
+			{
+				"clusterId": 1,
+				"host": "169.254.203.3",
+				"port": 5000
+			},
+			
+			{
+				"clusterId": 1,
+				"host": "169.254.203.4",
+				"port": 5000
 			}
+			
 	]
 }
