--- a/genesis-cluster/runtime/route-2.conf
+++ b/genesis-cluster/runtime/route-2.conf
@@ -3,14 +3,14 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4267,
-    "myHost":"localhost",
+    "myHost":"169.254.203.31",
     "commandPort": 4268,
     "globalPort":4269,
     "workerThreads" : 4,
     "routing": [
         {
             "id": 6,
-            "host": "localhost",
+            "host": "169.254.203.31",
             "port": 4667
         }
     ]
