global api- update and put place holders

--- a/genesis-cluster/runtime/route-1.conf
+++ b/genesis-cluster/runtime/route-1.conf
@@ -3,10 +3,15 @@
     "internalNode": true,
     "heartbeatDt": 3000,
     "workPort": 4167,
-    "myHost":"169.254.203.31",
+    "myHost":"127.0.0.1",
     "commandPort": 4168,
     "globalPort":5000,    
     "workerThreads" : 2,
     "routing": [
+    	{
+    		"id": 5,
+            "host": "127.0.0.1",
+            "port": 4567
+    	}
     ]
 }
