--- a/genesis-cluster/resources/global.conf
+++ b/genesis-cluster/resources/global.conf
@@ -1,32 +1,36 @@
 {
-"clusterId": 6,
+"clusterId": 5,
 "globalPort": 5000,
-"globalHost": "169.254.203.31",
+"globalHost": "169.254.203.51",
 "routing":[
-			
 			{
 				"clusterId": 1,
-				"host": "169.254.203.1",
+				"host": "169.254.203.11",
 				"port": 5000
 			},
 			
 			{
 				"clusterId": 1,
-				"host": "169.254.203.2",
+				"host": "169.254.203.12",
 				"port": 5000
 			},
 			
 			{
 				"clusterId": 1,
-				"host": "169.254.203.3",
+				"host": "169.254.203.13",
 				"port": 5000
 			},
 			
 			{
 				"clusterId": 1,
-				"host": "169.254.203.4",
+				"host": "169.254.203.14",
+				"port": 5000
+			},
+			
+			{
+				"clusterId": 1,
+				"host": "169.254.203.15",
 				"port": 5000
 			}
-			
 	]
 }
