--- a/genesis-cluster/resources/global-4.conf
+++ b/genesis-cluster/resources/global-4.conf
@@ -8,9 +8,16 @@
 				"host": "169.254.203.41",
 				"port": 5000
 			},
+			
 			{
 				"clusterId": 4,
 				"host": "169.254.203.42",
+				"port": 5000
+			},
+			
+			{
+				"clusterId": 4,
+				"host": "169.254.203.43",
 				"port": 5000
 			}
 	]
