--- a/genesis-cluster/resources/global.conf
+++ b/genesis-cluster/resources/global.conf
@@ -4,13 +4,18 @@
 "globalHost": "169.254.203.51",
 "routing":[
 			{
-				"clusterId": 4,
-				"host": "169.254.203.41",
+				"clusterId": 6,
+				"host": "169.254.203.62",
 				"port": 5000
 			},
 			{
-				"clusterId": 4,
-				"host": "169.254.203.42",
+				"clusterId": 6,
+				"host": "169.254.135.119",
+				"port": 5000
+			},
+			{
+				"clusterId": 6,
+				"host": "169.254.146.60",
 				"port": 5000
 			}
 	]
